Fix CartDropDown styling, needed to add .class-items overflow: scroll

--- a/src/components/CartDropDown/CartDropDown.scss
+++ b/src/components/CartDropDown/CartDropDown.scss
@@ -1,7 +1,8 @@
 .cart-dropdown {
   position: absolute;
   width: 240px;
-  height: 340px;
+  min-height: 340px;
+  height: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -10,14 +11,14 @@
   top: 90px;
   right: 40px;
   z-index: 5;
-  //
-  //.cart-items {
-  //  height: 240px;
-  //  display: flex;
-  //  flex-direction: column;
-  //  overflow: scroll;
-  //}
-  //
+
+  .cart-items {
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+  }
+
   button {
     margin-top: auto;
   }
